--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <%= if Guardian.Plug.current_token(@conn) do %>
+    <meta name='guardian_token' content="<%= Guardian.Plug.current_token(@conn) %>">
+  <% end %>
 
     <title>Sports Team Go</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
