--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,1 +1,8 @@
 Ok let's add some content, <%= @current_user.name %>
+
+<hr>
+<%= for team <- @teams do %>
+  <b><%= team.name %></b>
+<% end %>
+
+<hr>
